@@ -1,6 +1,7 @@
 1.1.4 - TBD
 
     * Improved rendering of the Beacon block
+    * Implemented Anvil rendering
 
 1.1.3 - 2013-01-14
     * Clicking in the map when it is maximally zoomed out will select an
